--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,15 +6,13 @@
     },
     "extends": "google",
     "overrides": [
-],
+    ],
     "parserOptions": {
     "ecmaVersion": "latest"
     },
     "rules": {
     "object-curly-spacing": 0,
     "new-cap": 0,
-    "space-before-function-paren": 0,
-    "linebreak-style": ["error", "windows"],
-    "indent": [ "error", 2]
+    "space-before-function-paren": 0
     }
 }
