--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-generator": "^4.2.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.9.3"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "eslint": "^9.0.0",
     "eslint-config-google": "^0.14.0",
-    "nodemon": "^3.1.0"
+    "nodeman": "^1.1.2",
+    "nodemon": "^3.1.1"
   }
 }
